--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,14 @@ body
     left:82%;			
     background-color: #FFFFFF;
 }
+
+.circle {
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    float: left;
+    border-radius: 100%;
+    border: 1px solid #000000;
+    background-color: #FFFFFF;
+    color: #FFFFFF;
+}
