cleaned up some combo text appearance and disappearance

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body
     border: 1px solid #000000;
     background-image: #FFFFFF;
 	background-size: 100% 100%;
-	background-image: url("https://www.google.com/images/srpr/logo11w.png");
+	background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d2/Solid_white.png");
 }
 #status{
 	color: #FF0000;
